--- a/Dataset_test.ipynb
+++ b/Dataset_test.ipynb
@@ -58,76 +58,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Restaurant ID', 'Restaurant Name', 'Country Code', 'City', 'Address',\n",
-       "       'Locality', 'Locality Verbose', 'Longitude', 'Latitude', 'Cuisines',\n",
-       "       'Average Cost for two', 'Currency', 'Has Table booking',\n",
-       "       'Has Online delivery', 'Is delivering now', 'Switch to order menu',\n",
-       "       'Price range', 'Aggregate rating', 'Rating color', 'Rating text',\n",
-       "       'Votes'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_rest.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_rest['Currency'].nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Botswana Pula(P)', 'Brazilian Real(R$)', 'Dollar($)',\n",
-       "       'Emirati Diram(AED)', 'Indian Rupees(Rs.)',\n",
-       "       'Indonesian Rupiah(IDR)', 'NewZealand($)', 'Pounds(\\x8c£)',\n",
-       "       'Qatari Rial(QR)', 'Rand(R)', 'Sri Lankan Rupee(LKR)',\n",
-       "       'Turkish Lira(TL)'], dtype=object)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_rest['Currency'].unique()\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -136,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +292,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +300,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df_rest = pd.read_csv(\"./zoomatod_restaurant_dataset/zomato.csv\", encoding='latin-1')\n",
+    "df_rest = pd.read_csv(\"./zomato.csv\", encoding='latin-1')\n",
     "df_rest.head()"
    ]
   },
@@ -383,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +322,7 @@
        "145"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +386,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_rest = df_rest.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "restaurant_id           0\n",
+       "restaurant_name         0\n",
+       "country_code            0\n",
+       "city                    0\n",
+       "address                 0\n",
+       "locality                0\n",
+       "locality_verbose        0\n",
+       "longitude               0\n",
+       "latitude                0\n",
+       "cuisines                0\n",
+       "average_cost_for_two    0\n",
+       "currency                0\n",
+       "has_table_booking       0\n",
+       "has_online_delivery     0\n",
+       "is_delivering_now       0\n",
+       "switch_to_order_menu    0\n",
+       "price_range             0\n",
+       "aggregate_rating        0\n",
+       "rating_color            0\n",
+       "rating_text             0\n",
+       "votes                   0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Controlla dati mancanti su df_rest\n",
+    "df_rest.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +977,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1010,7 +991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
